@@ -15,5 +15,5 @@
     "currentControllerButtons": 8,
     "currentControllerAxes": 8,
     "updateControls": false,
-    "uiRefreshes": 1
+    "uiRefreshes": 0
 }
